Add user fillable properties Change buttons place in image edit

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,7 +3,7 @@ copy.src.on.open=false
 copy.src.target=
 index.file=index.php
 remote.connection=time4vps-f5bced
-remote.directory=/fmb_images
+remote.directory=/dev_fmb_images
 remote.upload=ON_SAVE
 run.as=REMOTE
 url=http://fmb.images.gan4x4,ru
