--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,23 @@
 auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=false
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_path=tests/configuration.xml
+auxiliary.org-netbeans-modules-php-phpunit.customSuite_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.customSuite_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_enabled=true
+auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_path=vendor/phpunit/phpunit/phpunit
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=true
+file.reference.Images-tests=tests
 include.path=${php.global.include.path}
 php.version=PHP_70
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
+test.src.dir=${file.reference.Images-tests}
+testing.providers=PhpUnit
 web.root=.
